--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
       <li>Extra Hot Chilli</li>
    </ol>
 
-   <a target="blank" href="https://www.la-rosa.hu">La-Rosa</a>
+   <a target="blank" href="https://wolt.com/en/hun/pecs/restaurant/streat">La-Rosa</a>
 
    <a href="pages/orders.html">Orders</a>
 
-   <a target="blank" href="https://www.la-rosa.hu">
+   <a target="blank" href="https://wolt.com/en/hun/pecs/restaurant/streat">
       <img width="56" src="img/BBQ-burger.jpg" alt="Yummy Burger">
    </a>
 
